--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,4 +1,102 @@
 @charset "UTF-8";
-/* paleta de cores
-   verde */
 
+/*
+    Paleta de cores
+    Verde: #49a09d
+    Lilás: #5f2c82
+*/
+
+* {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+        box-sizing: border-box;
+}
+
+
+body, html {
+    background-color: #5f2c82;
+    height: 100vh;
+    width: 100vw;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    overflow: hidden;
+
+    background-color: white;
+    width: 250px;
+    height: 515px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+
+    transform: translate(-50%, -50%);
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
+}
+
+section#login > div#imagem {
+    display: block;
+    background: #5f2c82 url(../imagens/pexels-mithul-varshan-3023211.jpg) no-repeat;
+    background-size: cover;
+    background-position: left top;
+    height: 200px;
+}
+
+section#login > div#formulario {
+    display: block;
+    padding: 10px;
+}
+
+#formulario{
+    text-align: center;
+    margin-bottom: 10px;
+
+}
+
+#formulario p {
+    font-size: .8em;
+}
+#ico{
+    color: rgba(7, 7, 7, 0.568);
+    font-size: 20px;
+}
+#resets{
+    text-decoration: none;
+    color: black;
+}
+#entrar{
+    cursor: pointer;
+}
+#resettela{
+    background-color: aliceblue;
+    width: 200px;
+    height: 500px;
+    margin: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    overflow: hidden;
+    transform: translate(-50%, -50%);
+    border-radius: 30px;
+    padding: 10px;
+}
+#resettela h1{
+    text-align: center;
+    padding: 20px;
+    font-size: 1em;
+}
+#resettela label{
+    text-align: center;
+}
+#benviar{
+    padding: 0% 40%;
+}
